@@ -48,7 +48,7 @@ static const char description[] = I18N_NOOP("KDE Blackbox Game");
 int main( int argc, char **argv )
 {
   KAboutData aboutData( "kblackbox", I18N_NOOP("KBlackBox"),
-    KBVERSION, description, KAboutData::License_GPL,
+    KBBVERSION, description, KAboutData::License_GPL,
     "(c) 1999-2000, Robert Cimrman\n(c) 2007, Nicolas Roffet");
   aboutData.addAuthor("Robert Cimrman",0, "cimrman3@students.zcu.cz");
   aboutData.addAuthor("Nicolas Roffet",0, "nicolas-kde@roffet.com");
